...
            android:layout_height="wrap_content"
            android:background="?attr/colorSurfaceContainer"
            android:contentDescription="@string/open_drawer_menu"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_pager"
            app:layout_constraintBottom_toBottomOf="@id/tabs"
            android:fitsSystemWindows="true"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/tabs"
            android:layout_width="0dp"
...
